changed page title + added favicon + minor fix

--- a/resources/scss/appGuest.scss
+++ b/resources/scss/appGuest.scss
@@ -1,6 +1,6 @@
 @import '~bootstrap/scss/bootstrap';
 
-body {
-    background-color: lightcyan;
-    color: crimson;
-}
+// body {
+//     background-color: lightcyan;
+//     color: crimson;
+// }
