--- a/resources/scss/admin.scss
+++ b/resources/scss/admin.scss
@@ -4,7 +4,7 @@ a {
     text-decoration: none;
 }
 
-nav {
+.navbar {
     height: 80px;
     background-color: #2F3439;
     a {
@@ -35,7 +35,7 @@ aside {
 
             &:hover,
             &.active {
-                border-left: 5px solid #0D6EFD;
+                border-left: 5px solid #FFC107;
                 background-color: #464e55;
             }
         }
